--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(Catch2)
 
 add_executable(tests
-    test/arith.cxx)
+    test/arith.cxx
+    test/convert.cxx
+    )
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain ddouble)
 target_include_directories(tests PRIVATE src)
