--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Library
 add_library(ddouble SHARED
     src/ddouble.cxx
+    src/io.cxx
     )
 target_compile_options(ddouble PRIVATE -Wall -Wextra)
 
