--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,16 @@ target_compile_options(ddouble PRIVATE -Wall -Wextra)
 
 
 # Require Catch2 for tests
-include(FetchContent)
-FetchContent_Declare(
-    Catch2
-    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG v3.4.0
-    )
-FetchContent_MakeAvailable(Catch2)
+find_package(Catch2 3)
+if (NOT Catch2_FOUND)
+    include(FetchContent)
+    FetchContent_Declare(
+        Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG v3.4.0
+        )
+    FetchContent_MakeAvailable(Catch2)
+endif()
 
 # MPFR is required for tests
 find_package(MPFR REQUIRED)
