Make testing dependencies optional.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,9 @@ jobs:
       - name: CMake configure and build
         uses: threeal/cmake-action@v1.3.0
         with:
+          options: -DBUILD_TESTING=ON
           run-build: true
 
       - name: Run tests
         run: |
-          build/tests
+          build/test/tests
