--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,33 +25,7 @@ add_library(ddouble SHARED
     )
 target_compile_options(ddouble PRIVATE -Wall -Wextra)
 
-
-# Require Catch2 for tests
-find_package(Catch2 3)
-if (NOT Catch2_FOUND)
-    include(FetchContent)
-    FetchContent_Declare(
-        Catch2
-        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-        GIT_TAG v3.4.0
-        )
-    FetchContent_MakeAvailable(Catch2)
+# TESTS
+if (BUILD_TESTING)
+    add_subdirectory("test")
 endif()
-
-# MPFR is required for tests
-find_package(MPFR REQUIRED)
-
-add_executable(tests
-    test/mpfloat.cxx
-    test/convert.cxx
-    test/arith.cxx
-    test/funcs.cxx
-    test/exp.cxx
-    test/circular.cxx
-    test/hyperbolic.cxx
-    )
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(tests PRIVATE MPFR::MPFR)
-target_link_libraries(tests PRIVATE ddouble)
-target_include_directories(tests PRIVATE src)
-target_compile_options(tests PRIVATE -Wall -Wextra)
