--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,5 +28,5 @@ add_executable(tests
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(tests PRIVATE MPFR::MPFR)
 target_link_libraries(tests PRIVATE xprec)
-target_include_directories(tests PRIVATE ../src)
+target_include_directories(tests PRIVATE ../include)
 target_compile_options(tests PRIVATE -Wall -Wextra)
