Extract version from header file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,24 @@
 cmake_minimum_required(VERSION 3.9)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/config/cmake")
 
+# extract version information from header file
+if (NOT XPREC_VERSION)
+    include("VersionFromHeader")
+    version_from_header(
+        XPREC_VERSION "include/xprec/version.h"
+        XPREC_VERSION_MAJOR XPREC_VERSION_MINOR XPREC_VERSION_PATCH)
+    message(STATUS "Extracted package version: ${XPREC_VERSION}")
+
+    set(XPREC_VERSION "${XPREC_VERSION}"
+        CACHE STRING "version of the xprec package")
+    mark_as_advanced(XPREC_VERSION)
+endif()
+
+# Configure project
 project(
     libxprec
     LANGUAGES CXX
-    VERSION 0.1.0
+    VERSION "${XPREC_VERSION}"
     DESCRIPTION "library for emulated extended-precision arithmetic"
     )
 
