Allow to use CMake test infrastructure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,8 @@ install(
     DESTINATION include
     )
 
-# TESTS
+# Tests
 if (BUILD_TESTING)
+    enable_testing()
     add_subdirectory("test")
 endif()
