--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,9 +39,10 @@ jobs:
       - name: CMake configure and build
         uses: threeal/cmake-action@v1.3.0
         with:
-          options: BUILD_TESTING=ON
+          options: BUILD_TESTING=${{ startsWith(matrix.os, 'windows') && 'OFF' || 'ON' }}
           run-build: true
 
       - name: Run tests
+        if: (!startsWith(matrix.os, 'windows'))
         run: |
           build/test/tests
