--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,4 +34,10 @@ target_link_libraries(tests PRIVATE MPFR::MPFR)
 target_link_libraries(tests PRIVATE xprec)
 target_include_directories(tests PRIVATE ../include)
 target_compile_options(tests PRIVATE -Wall -Wextra)
+
+if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.12")
+    set_property(TARGET tests PROPERTY CXX_STANDARD 20)
+else()
+    set_property(TARGET tests PROPERTY CXX_STANDARD 17)
+endif()
 add_test(tests tests)
