Add test for inline use of library.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(tests
     funcs.cxx
     gauss.cxx
     hyperbolic.cxx
+    inline.cxx
     mpfloat.cxx
     )
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
