Do not install header-only stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ install(TARGETS xprec)
 install(
     DIRECTORY include/
     DESTINATION include
+    PATTERN "ddouble-header-only.h" EXCLUDE
     )
 
 # Tests
