Properly advertise CMake targets.
This is described at [1] and [2], but it is still quite strange, but
considering cmake, also maybe not, why this is not done automatically.

[1]: https://cmake.org/cmake/help/v3.29/guide/tutorial/Adding%20Export%20Configuration.html
[2]: https://stackoverflow.com/questions/25676277

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 
 # Configure project
 project(
-    libxprec
+    XPrec
     LANGUAGES CXX
     VERSION "${XPREC_VERSION}"
     DESCRIPTION "library for emulated extended-precision arithmetic"
@@ -38,7 +38,10 @@ add_library(xprec SHARED
 if(NOT MSVC)
     target_compile_options(xprec PRIVATE -Wall -Wextra -pedantic)
 endif()
-target_include_directories(xprec PUBLIC include)
+target_include_directories(xprec INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    )
 set_target_properties(xprec PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -46,11 +49,22 @@ set_target_properties(xprec PROPERTIES
     CXX_STANDARD_REQUIRED ON
     )
 
-install(TARGETS xprec)
+# Use library convention.
+add_library(XPrec::xprec ALIAS xprec)
+
+install(
+    TARGETS xprec
+    EXPORT xprec_exports
+    )
 install(
     DIRECTORY include/
     DESTINATION include
     PATTERN "ddouble-header-only.h" EXCLUDE
+    )
+install(
+    EXPORT xprec_exports
+    NAMESPACE XPrec::
+    DESTINATION lib/cmake/XPrec
     )
 
 set(XPREC_TEST OFF
