--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: CMake configure and build
         uses: threeal/cmake-action@v1.3.0
         with:
-          options: XPREC_TEST=${{ startsWith(matrix.os, 'windows') && 'OFF' || 'ON' }}
+          options: XPREC_BUILD_TESTING=${{ startsWith(matrix.os, 'windows') && 'OFF' || 'ON' }}
           run-build: true
 
       - name: Run tests
